@@ -3,7 +3,7 @@ module Reddy
   #
   # Graphs store triples, and the namespaces associated with those triples, where defined
   class Graph
-    attr_accessor :triples, :nsbinding, :identifier
+    attr_accessor :triples, :nsbinding, :identifier, :store
     attr_accessor :next_generated, :named_nodes
 
     # Create a Graph with the given store_type and identifier.
@@ -22,12 +22,12 @@ module Reddy
     # For more on named graphs, see: http://www.w3.org/2004/03/trix/
     #
     # @param [Hash] options:: Options
-    # <em>options[:store_type]</em>:: storage type, currently only <tt>:memory</tt> is supported
+    # <em>options[:store_type]</em>:: storage type, currently only <tt>:list</tt> is supported
     # <em>options[:identifier]</em>:: Identifier for this graph, Literal, BNode or URIRef
     #
     # @author Gregg Kellogg
     def initialize(options = {})
-      @triples = []
+      options[:store_type] ||= :list
       @nsbinding = {}
 
       # For BNode identifier generation
@@ -35,64 +35,46 @@ module Reddy
       @named_nodes = {}
       
       @identifier = options[:identifier] || BNode.new(self)
+      
+      # Instantiate triple store
+      case options[:store_type].to_s
+      when "list"
+        @store = ListStore.new(self)
+      else
+        raise GraphException.new("No store of type #{options[:store_type]}")
+      end
     end
 
-    # Number of Triples in the graph
-    def size
-      @triples.size
+    # Data Store interface
+
+    # Destroy the store identified by _configuration_ if supported
+    def destroy(configuration = nil)
+      @store.destroy(configuration)
+      self.freeze
     end
 
-    # List of distinct subjects in graph
-    def subjects
-      @triples.map {|t| t.subject}.uniq
-    end
-    
-    # List of distinct predicates in graph
-    def predicates
-      @triples.map {|t| t.predicate}.uniq
-    end
-    
-    # List of distinct objects in graph
-    def objects
-      @triples.map {|t| t.object}.uniq
-    end
-    
-    # Indexed statement in serialized graph triples. Equivalent to graph.triples[item] 
-    def [] (item)
-      @triples[item]
+    # Commit changes to graph
+    def commit; @store.commit; end
+
+    # Rollback active transactions
+    def rollback; @store.rollback; end
+
+    # Open the graph store
+    #
+    # Might be necessary for stores that require opening a connection to a
+    # database or acquiring some resource.
+    def open(configuration, create=false)
+      @store.open(configuration, create)
     end
 
-    ## 
-    # Adds a triple to a graph directly from the intended subject, predicate, and object.
+    # Close the graph store
     #
-    # ==== Example
-    #   g = Graph.new; g.add_triple(BNode.new, URIRef.new("http://xmlns.com/foaf/0.1/knows"), BNode.new) # => results in the triple being added to g; returns an array of g's triples
-    #
-    # @param [URIRef, BNode] subject:: the subject of the triple
-    # @param [URIRef] predicate:: the predicate of the triple
-    # @param [URIRef, BNode, Literal] object:: the object of the triple
-    # @return [Array]:: An array of the triples (leaky abstraction? consider returning the graph instead)
-    # @raise [Error]:: Checks parameter types and raises if they are incorrect.
-    #
-    # @author Tom Morris
-    def add_triple(subject, predicate, object)
-      self << Triple.new(subject, predicate, object)
+    # Might be necessary for stores that require closing a connection to a
+    # database or releasing some resource.
+    def close(commit_pending_transaction=false)
+      @store.open(commit_pending_transaction)
     end
 
-    ## 
-    # Adds an extant triple to a graph
-    #
-    # ==== Example
-    #   g = Graph.new; t = Triple.new(BNode.new, URIRef.new("http://xmlns.com/foaf/0.1/knows"), BNode.new); g << t) # => results in the triple being added to g; returns an array of g's triples
-    #
-    # @param [Triple] t:: the triple to be added to the graph
-    # @return [Array]:: An array of the triples (leaky abstraction? consider returning the graph instead)
-    #
-    # @author Tom Morris
-    def << (triple)
-      @triples << triple unless contains?(triple)
-    end
-    
     ## 
     # Exports the graph to RDF in N-Triples form.
     #
@@ -103,7 +85,7 @@ module Reddy
     #
     # @author Tom Morris
     def to_ntriples
-      @triples.collect do |t|
+      triples.collect do |t|
         t.to_ntriples
       end * "\n" + "\n"
     end
@@ -173,54 +155,86 @@ module Reddy
 
     # Bind a namespace to the graph
     def bind(namespace)
-      if namespace.class == Namespace
-        @nsbinding["#{namespace.prefix}"] = namespace
-      else
-        raise GraphException, "Can't bind #{namespace.inspect} as namespace"
-      end
+      raise GraphException, "Can't bind #{namespace.inspect} as namespace" unless namespace.is_a?(Namespace)
+      @nsbinding["#{namespace.prefix}"] = namespace
     end
 
-    # Triples from graph, optionally matching subject, predicate, or object
+    # Number of Triples in the graph
+    def size
+      @store.respond_to?(:size) ? @store.size : triples.size
+    end
+
+    # List of distinct subjects in graph
+    def subjects
+      @store.respond_to?(:subjects) ? @store.subjects : triples.map {|t| t.subject}.uniq
+    end
+    
+    # List of distinct predicates in graph
+    def predicates
+      @store.respond_to?(:predicates) ? @store.predicates : triples.map {|t| t.predicate}.uniq
+    end
+    
+    # List of distinct objects in graph
+    def objects
+      @store.respond_to?(:objects) ? @store.objects : triples.map {|t| t.object}.uniq
+    end
+    
+    # Indexed statement in serialized graph triples. Equivalent to graph.triples[item] 
+    def [] (item)
+      @store.respond_to?(:[]) ? @store[item] : triples[item]
+    end
+
+    # Adds a triple to a graph directly from the intended subject, predicate, and object.
     #
     # ==== Example
+    #   g = Graph.new; g.add_triple(BNode.new, URIRef.new("http://xmlns.com/foaf/0.1/knows"), BNode.new) # => results in the triple being added to g; returns an array of g's triples
     #
+    # @param [URIRef, BNode] subject:: the subject of the triple
+    # @param [URIRef] predicate:: the predicate of the triple
+    # @param [URIRef, BNode, Literal] object:: the object of the triple
+    # @return [Array]:: An array of the triples (leaky abstraction? consider returning the graph instead)
+    # @raise [Error]:: Checks parameter types and raises if they are incorrect.
+    #
+    # @author Tom Morris
+    def add_triple(subject, predicate, object)
+      self << Triple.new(subject, predicate, object)
+    end
+
+    ## 
+    # Adds an extant triple to a graph. Delegates to Store#<<.
+    #
+    # ==== Example
+    #   g = Graph.new; t = Triple.new(BNode.new, URIRef.new("http://xmlns.com/foaf/0.1/knows"), BNode.new); g << t) # => results in the triple being added to g; returns an array of g's triples
+    #
+    # @param [Triple] t:: the triple to be added to the graph
+    # @return [Array]:: An array of the triples (leaky abstraction? consider returning the graph instead)
+    #
+    # @author Tom Morris
+    def << (triple); @store << triple; end
+    
+    # Remove a triple from the graph. Delegates to store.
+    #
+    # If the triple does not provide a context attribute, removes the triple
+    # from all contexts.
+    def remove(triple); @store.remove(triple); end
+    
+    # Triples from graph, optionally matching subject, predicate, or object.
+    # Delegates to Store#triples.
     #
     # @param [Hash] options:: List of options for matching triples
     # <em>options[:subject]</em>:: If specified, limited to triples having the specified subject
     # <em>options[:predicate]</em>:: If specified, limited to triples having the specified predicate
     # <em>options[:object]</em>:: If specified, limited to triples having the specified object. May be a Regexp
     # @return [Array]:: List of matched triples
-    #
-    # @author Gregg Kellogg
-    def triples(options = {})
-      subject = options[:subject]
-      predicate = options[:predicate]
-      object = options[:object]
-      if subject || predicate || object
-        @triples.select do |triple|
-          next if subject && triple.subject != subject
-          next if predicate && triple.predicate != predicate
-          case object
-          when Regexp
-            next unless object.match(triple.object.to_s)
-          when URIRef, BNode, Literal, String
-            next unless triple.object == object
-          end
-            
-          yield triple if block_given?
-          triple
-        end.compact
-      elsif block_given?
-        @triples.each {|triple| yield triple}
-      else
-        @triples
-      end
+    def triples(options = {}, &block) # :yields: triple
+      @store.triples(options, &block) || []
     end
     alias_method :find, :triples
 
     # Detect the presence of a BNode in the graph, either as a subject or an object
     #
     # @param [BNode, String] bn:: BNode or identifier to find
+    #
     def has_bnode_identifier?(bn)
       bn = bnode(bn) unless bn.is_a?(BNode)
       triples do |triple|
@@ -231,24 +245,27 @@ module Reddy
 
     # Check to see if this graph contains the specified triple
     def contains?(triple)
-      triples {|t| return true if t == triple}
-      false
+      @store.contains?(triple)
     end
     
     # Get all BNodes with usage count used within graph
     def bnodes
-      bn = {}
-      triples do |t|
-        if t.subject.is_a?(BNode)
-          bn[t.subject] ||= 0
-          bn[t.subject] += 1
+      if @store.respond_to?(:bnodes?)
+        @store.bnodes
+      else
+        bn = {}
+        triples do |t|
+          if t.subject.is_a?(BNode)
+            bn[t.subject] ||= 0
+            bn[t.subject] += 1
+          end
+          if t.object.is_a?(BNode)
+            bn[t.object] ||= 0
+            bn[t.object] += 1
+          end
         end
-        if t.object.is_a?(BNode)
-          bn[t.object] ||= 0
-          bn[t.object] += 1
-        end
+        bn
       end
-      bn
     end
     
     # Get list of subjects having rdf:type == object
@@ -277,12 +294,6 @@ module Reddy
       end
     end
     
-    # Clone the graph, including cloning each triple
-    def clone
-      g = Graph.new
-      triples {|t| g << t.clone}
-    end
-
     # Two graphs are equal if each is an instance of the other, considering BNode equivalence.
     # This is done by creating a new graph an substituting each permutation of BNode identifiers
     # from self to other until every permutation is exhausted, or a textual equivalence is found
@@ -310,4 +321,5 @@ module Reddy
   def bnode(id = nil)
     BNode.new(self, id)
   end
+  
 end
